--- a/src/main/java/com/assemblogue/plr/app/generic/semgraph/DraggableNode.fxml
+++ b/src/main/java/com/assemblogue/plr/app/generic/semgraph/DraggableNode.fxml
@@ -15,26 +15,34 @@
    <children>
       <VBox prefHeight="96.0" prefWidth="80.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox maxHeight="-Infinity" minHeight="-Infinity" prefHeight="17.0" prefWidth="130.0">
+            <HBox focusTraversable="true" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="26.0" prefWidth="143.0">
                <children>
-                  <AnchorPane fx:id="left_link_handle" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="25.0" styleClass="left-link-handle" />
-                  <AnchorPane fx:id="right_link_handle" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="25.0" styleClass="right-link-handle">
-                     <effect>
-                        <Shadow />
-                     </effect>
-                  </AnchorPane>
-                  <AnchorPane maxWidth="-Infinity" minWidth="-Infinity" prefWidth="30.0" />
-                  <Label fx:id="close_button" alignment="TOP_RIGHT" prefHeight="27.0" prefWidth="67.0" text="X" textAlignment="RIGHT">
+                  <HBox>
+                     <children>
+                        <AnchorPane maxWidth="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="121.0" />
+                     </children>
+                  </HBox>
+                  <AnchorPane />
+                  <Label fx:id="close_button" alignment="TOP_RIGHT" prefHeight="27.0" prefWidth="34.0" text="X" textAlignment="RIGHT">
                      <padding>
                         <Insets right="10.0" />
                      </padding>
                   </Label>
                </children>
+               <effect>
+                  <SepiaTone />
+               </effect>
             </HBox>
             <TextArea fx:id="title_bar" prefHeight="50.0" prefWidth="130.0" />
-            <ChoiceBox fx:id="choicebox" maxHeight="39.0" prefHeight="39.0" prefWidth="145.0" />
+            <HBox fx:id="attribute" prefHeight="28.0" prefWidth="143.0" />
          </children>
       </VBox>
+      <AnchorPane fx:id="left_link_handle" layoutX="-24.0" layoutY="31.0" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="37.0" prefWidth="25.0" styleClass="left-link-handle" />
+      <AnchorPane fx:id="right_link_handle" layoutX="144.0" layoutY="28.0" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="46.0" prefWidth="25.0" styleClass="right-link-handle">
+         <effect>
+            <Shadow />
+         </effect>
+      </AnchorPane>
    </children>
    <effect>
       <Blend mode="BLUE">
